Improved visual design

--- a/jollof-rice.html
+++ b/jollof-rice.html
@@ -46,10 +46,10 @@
             do each of the steps in detail.
         </p>
 
-        <h4 id="ingredients">Ingredients</h4>
+        <h4>Ingredients</h4>
         <a href="#"><img src="./images/ingredients.jpeg" alt="Ingredients for Jellof" 
-            width="480" height="480"></a>
-        <ul>
+            width="480px" height="480px"></a>
+        <ul id="ingredients">
             <li>1 medium sized onion, finely diced, set aside</li>
             <li>2 1/2 of chicken broth</li>
             <li>1 tsp salt to taste</li>
@@ -109,10 +109,10 @@
             and then explore with other recipes to pair with this belly filling dish:
         </p>
         <ul>
-            <li><a href="https://www.khay-kitchen.com/chicken-stew-african-style/">Chicken
+            <li><a href="https://www.khay-kitchen.com/chicken-stew-african-style/" class="links">Chicken
                 stew (African style)</a></li>
-            <li><a href="https://www.khay-kitchen.com/suya-chicken/">Suya Chicken</a></li>
-            <li><a href="https://www.khay-kitchen.com/russian-salad">Russian Salad</a></li>
+            <li><a href="https://www.khay-kitchen.com/suya-chicken/" class="links">Suya Chicken</a></li>
+            <li><a href="https://www.khay-kitchen.com/russian-salad" class="links">Russian Salad</a></li>
         </ul>
 
         <aside id="more">
@@ -120,11 +120,11 @@
                 <h3>Need more recipes? Subscribe to our Newsletter</h3> 
                 <form action="https:khay-kitchen.com" class="details">
                     <label for="name">
-                        Name: <input id="name" type="text" value="name" name="more-recipes" required>
+                        Name: <input id="name" type="text" placeholder="name" name="more-recipes" required>
                     </label><br>
 
                     <label for="email">
-                        Email: <input id="email" type="email" value="email" name="more-recipes" required>
+                        Email: <input id="email" type="email" placeholder="email" name="more-recipes" required>
                     </label><br>
 
                     <button type="submit">Submit</button>
